--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" media="all" href="./css/main.min.css">
   <link rel="stylesheet" href="./font/stylesheet.css">
+  <link rel="stylesheet" href="https://media.made.com/mws-assets/fontBase_ce5d99a44e0152b2bab0.css">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -56,7 +57,7 @@
   style="background-image: url('img/hero.avif');
   height: 80vh; width: 100%; 
   background-repeat: no-repeat; 
-  background-size: contain;
+ background-size: 100% 100%;
   position: relative;">
 
     <div style="display: flex;
@@ -69,12 +70,13 @@
     line-height: 60px;letter-spacing: normal;font-weight: 500;">FREE DELIVERY</h1>
       <h2 style="left: 10%;
     position: absolute;
-    top: 50%;font-size: 20px;
+    top: 51%;font-size: 20px;
     line-height: 30px; font-weight: 100!important;">On everything</h2>
       <a href="shop.html">
-      <button style="left: 10%;
+      <button class="title__link"
+      style="left: 10%;
     position: absolute;
-    top: 55%;">Shop now</button>
+    top: 57%;">Shop now</button>
       </div>
       </a>
     </div>
