--- a/index.html
+++ b/index.html
@@ -81,6 +81,262 @@
       </a>
     </div>
   </section>
+
+  <section class="wrapper__items"
+  style="    padding: 130px 0; display: block;">
+  <div class="container" style="position: relative;
+    margin: 0 auto;
+    padding: 0 15px;
+    max-width: 1470px;display: block;">
+    
+    <h1 class="wrapper__title">Sofas</h1>
+
+    <ul class="wrapper__list-item">
+
+    <li class="wrapper__items">
+      <a href="1.html">
+        <div class="wrapper__items-img" style="position: relative;
+    margin-bottom: 30px;">
+      <img src="img/1.jpg" alt="Items" style="display: block;
+    width: 100%;
+    height: 100%;">
+    <p class="wrapper__items-promo">Express dispatch</p>
+
+<noindex>
+  <div class="wrapper__flex">
+    <h3 class="wrapper__items-title">Ebro</h3>
+     <p class="wrapper__items-price">€350</p>
+  </div>
+  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+    </noindex>
+        </div>
+      </a>
+    </li>
+
+     <li class="wrapper__items">
+      <a href="1.html">
+        <div class="wrapper__items-img" style="position: relative;
+    margin-bottom: 30px;">
+      <img src="img/1.jpg" alt="Items" style="display: block;
+    width: 100%;
+    height: 100%;">
+    <p class="wrapper__items-promo">Express dispatch</p>
+
+<noindex>
+  <div class="wrapper__flex">
+    <h3 class="wrapper__items-title">Ebro</h3>
+     <p class="wrapper__items-price">€350</p>
+  </div>
+  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+    </noindex>
+        </div>
+      </a>
+    </li>
+
+     <li class="wrapper__items">
+      <a href="1.html">
+        <div class="wrapper__items-img" style="position: relative;
+    margin-bottom: 30px;">
+      <img src="img/1.jpg" alt="Items" style="display: block;
+    width: 100%;
+    height: 100%;">
+    <p class="wrapper__items-promo">Express dispatch</p>
+
+<noindex>
+  <div class="wrapper__flex">
+    <h3 class="wrapper__items-title">Ebro</h3>
+     <p class="wrapper__items-price">€350</p>
+  </div>
+  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+    </noindex>
+        </div>
+      </a>
+    </li>
+
+     <li class="wrapper__items">
+      <a href="1.html">
+        <div class="wrapper__items-img" style="position: relative;
+    margin-bottom: 30px;">
+      <img src="img/1.jpg" alt="Items" style="display: block;
+    width: 100%;
+    height: 100%;">
+    <p class="wrapper__items-promo">Express dispatch</p>
+
+<noindex>
+  <div class="wrapper__flex">
+    <h3 class="wrapper__items-title">Ebro</h3>
+     <p class="wrapper__items-price">€350</p>
+  </div>
+  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+    </noindex>
+        </div>
+      </a>
+    </li>
+
+     <li class="wrapper__items">
+      <a href="1.html">
+        <div class="wrapper__items-img" style="position: relative;
+    margin-bottom: 30px;">
+      <img src="img/1.jpg" alt="Items" style="display: block;
+    width: 100%;
+    height: 100%;">
+    <p class="wrapper__items-promo">Express dispatch</p>
+
+<noindex>
+  <div class="wrapper__flex">
+    <h3 class="wrapper__items-title">Ebro</h3>
+     <p class="wrapper__items-price">€350</p>
+  </div>
+  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+    </noindex>
+        </div>
+      </a>
+    </li>
+
+     <li class="wrapper__items">
+      <a href="1.html">
+        <div class="wrapper__items-img" style="position: relative;
+    margin-bottom: 30px;">
+      <img src="img/1.jpg" alt="Items" style="display: block;
+    width: 100%;
+    height: 100%;">
+    <p class="wrapper__items-promo">Express dispatch</p>
+
+<noindex>
+  <div class="wrapper__flex">
+    <h3 class="wrapper__items-title">Ebro</h3>
+     <p class="wrapper__items-price">€350</p>
+  </div>
+  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+    </noindex>
+        </div>
+      </a>
+    </li>
+
+     <li class="wrapper__items">
+      <a href="1.html">
+        <div class="wrapper__items-img" style="position: relative;
+    margin-bottom: 30px;">
+      <img src="img/1.jpg" alt="Items" style="display: block;
+    width: 100%;
+    height: 100%;">
+    <p class="wrapper__items-promo">Express dispatch</p>
+
+<noindex>
+  <div class="wrapper__flex">
+    <h3 class="wrapper__items-title">Ebro</h3>
+     <p class="wrapper__items-price">€350</p>
+  </div>
+  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+    </noindex>
+        </div>
+      </a>
+    </li>
+
+     <li class="wrapper__items">
+      <a href="1.html">
+        <div class="wrapper__items-img" style="position: relative;
+    margin-bottom: 30px;">
+      <img src="img/1.jpg" alt="Items" style="display: block;
+    width: 100%;
+    height: 100%;">
+    <p class="wrapper__items-promo">Express dispatch</p>
+
+<noindex>
+  <div class="wrapper__flex">
+    <h3 class="wrapper__items-title">Ebro</h3>
+     <p class="wrapper__items-price">€350</p>
+  </div>
+  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+    </noindex>
+        </div>
+      </a>
+    </li>
+
+     <li class="wrapper__items">
+      <a href="1.html">
+        <div class="wrapper__items-img" style="position: relative;
+    margin-bottom: 30px;">
+      <img src="img/1.jpg" alt="Items" style="display: block;
+    width: 100%;
+    height: 100%;">
+    <p class="wrapper__items-promo">Express dispatch</p>
+
+<noindex>
+  <div class="wrapper__flex">
+    <h3 class="wrapper__items-title">Ebro</h3>
+     <p class="wrapper__items-price">€350</p>
+  </div>
+  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+    </noindex>
+        </div>
+      </a>
+    </li>
+
+     <li class="wrapper__items">
+      <a href="1.html">
+        <div class="wrapper__items-img" style="position: relative;
+    margin-bottom: 30px;">
+      <img src="img/1.jpg" alt="Items" style="display: block;
+    width: 100%;
+    height: 100%;">
+    <p class="wrapper__items-promo">Express dispatch</p>
+
+<noindex>
+  <div class="wrapper__flex">
+    <h3 class="wrapper__items-title">Ebro</h3>
+     <p class="wrapper__items-price">€350</p>
+  </div>
+  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+    </noindex>
+        </div>
+      </a>
+    </li>
+
+     <li class="wrapper__items">
+      <a href="1.html">
+        <div class="wrapper__items-img" style="position: relative;
+    margin-bottom: 30px;">
+      <img src="img/1.jpg" alt="Items" style="display: block;
+    width: 100%;
+    height: 100%;">
+    <p class="wrapper__items-promo">Express dispatch</p>
+
+<noindex>
+  <div class="wrapper__flex">
+    <h3 class="wrapper__items-title">Ebro</h3>
+     <p class="wrapper__items-price">€350</p>
+  </div>
+  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+    </noindex>
+        </div>
+      </a>
+    </li>
+
+     <li class="wrapper__items">
+      <a href="1.html">
+        <div class="wrapper__items-img" style="position: relative;
+    margin-bottom: 30px;">
+      <img src="img/1.jpg" alt="Items" style="display: block;
+    width: 100%;
+    height: 100%;">
+    <p class="wrapper__items-promo">Express dispatch</p>
+
+<noindex>
+  <div class="wrapper__flex">
+    <h3 class="wrapper__items-title">Ebro</h3>
+     <p class="wrapper__items-price">€350</p>
+  </div>
+  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+    </noindex>
+        </div>
+      </a>
+    </li>
+
+    </ul>
+  </div>
+
+  </section>
   </main>
 </body>
 
