--- a/index.html
+++ b/index.html
@@ -88,16 +88,33 @@
     margin: 0 auto;
     padding: 0 15px;
     max-width: 1470px;display: block;">
-    
     <h1 class="wrapper__title">Sofas</h1>
-
     <ul class="wrapper__list-item">
 
     <li class="wrapper__items">
-      <a href="1.html">
+      <a href="MS/1.html">
         <div class="wrapper__items-img" style="position: relative;
     margin-bottom: 30px;">
-      <img src="img/1.jpg" alt="Items" style="display: block;
+      <img src="img/ms/1.avif" alt="Items" style="display: block;
+    width: 100%;
+    height: 100%;">
+    <p class="wrapper__items-promo">Express dispatch</p>
+<noindex>
+  <div class="wrapper__flex">
+    <h3 class="wrapper__items-title">Ebro</h3>
+     <p class="wrapper__items-price">€350</p>
+  </div>
+  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+    </noindex>
+        </div>
+      </a>
+    </li>
+
+     <li class="wrapper__items">
+      <a href="MS/2.html">
+        <div class="wrapper__items-img" style="position: relative;
+    margin-bottom: 30px;">
+      <img src="img/MS/2.avif" alt="Items" style="display: block;
     width: 100%;
     height: 100%;">
     <p class="wrapper__items-promo">Express dispatch</p>
@@ -114,10 +131,10 @@
     </li>
 
      <li class="wrapper__items">
-      <a href="1.html">
+      <a href="MS/3.html">
         <div class="wrapper__items-img" style="position: relative;
     margin-bottom: 30px;">
-      <img src="img/1.jpg" alt="Items" style="display: block;
+      <img src="img/MS/3.avif" alt="Items" style="display: block;
     width: 100%;
     height: 100%;">
     <p class="wrapper__items-promo">Express dispatch</p>
@@ -134,10 +151,31 @@
     </li>
 
      <li class="wrapper__items">
-      <a href="1.html">
+      <a href="MS/4.html">
         <div class="wrapper__items-img" style="position: relative;
     margin-bottom: 30px;">
-      <img src="img/1.jpg" alt="Items" style="display: block;
+      <img src="img/MS/4.avif" alt="Items" style="display: block;
+    width: 100%;
+    height: 100%;">
+    <p class="wrapper__items-promo">Express dispatch</p>
+
+<noindex>
+  <div class="wrapper__flex">
+    <h3 class="wrapper__items-title">Ebro</h3>
+     <p class="wrapper__items-price">€350</p>
+  </div>
+  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+    </noindex>
+        </div>
+      </a>
+    </li>
+
+
+     <li class="wrapper__items">
+      <a href="СS/1.html">
+        <div class="wrapper__items-img" style="position: relative;
+    margin-bottom: 30px;">
+      <img src="img/CS/1.avif" alt="Items" style="display: block;
     width: 100%;
     height: 100%;">
     <p class="wrapper__items-promo">Express dispatch</p>
@@ -154,10 +192,10 @@
     </li>
 
      <li class="wrapper__items">
-      <a href="1.html">
+      <a href="СS/2.html">
         <div class="wrapper__items-img" style="position: relative;
     margin-bottom: 30px;">
-      <img src="img/1.jpg" alt="Items" style="display: block;
+      <img src="img/CS/2.avif" alt="Items" style="display: block;
     width: 100%;
     height: 100%;">
     <p class="wrapper__items-promo">Express dispatch</p>
@@ -174,10 +212,10 @@
     </li>
 
      <li class="wrapper__items">
-      <a href="1.html">
+      <a href="СS/3.html">
         <div class="wrapper__items-img" style="position: relative;
     margin-bottom: 30px;">
-      <img src="img/1.jpg" alt="Items" style="display: block;
+      <img src="img/CS/3.avif" alt="Items" style="display: block;
     width: 100%;
     height: 100%;">
     <p class="wrapper__items-promo">Express dispatch</p>
@@ -194,10 +232,10 @@
     </li>
 
      <li class="wrapper__items">
-      <a href="1.html">
+      <a href="СS/4.html">
         <div class="wrapper__items-img" style="position: relative;
     margin-bottom: 30px;">
-      <img src="img/1.jpg" alt="Items" style="display: block;
+      <img src="img/CS/4.avif" alt="Items" style="display: block;
     width: 100%;
     height: 100%;">
     <p class="wrapper__items-promo">Express dispatch</p>
@@ -214,10 +252,10 @@
     </li>
 
      <li class="wrapper__items">
-      <a href="1.html">
+      <a href="SS/1.html">
         <div class="wrapper__items-img" style="position: relative;
     margin-bottom: 30px;">
-      <img src="img/1.jpg" alt="Items" style="display: block;
+      <img src="img/SS/1.avif" alt="Items" style="display: block;
     width: 100%;
     height: 100%;">
     <p class="wrapper__items-promo">Express dispatch</p>
@@ -234,10 +272,10 @@
     </li>
 
      <li class="wrapper__items">
-      <a href="1.html">
+      <a href="SS/2.html">
         <div class="wrapper__items-img" style="position: relative;
     margin-bottom: 30px;">
-      <img src="img/1.jpg" alt="Items" style="display: block;
+      <img src="img/SS/2.avif" alt="Items" style="display: block;
     width: 100%;
     height: 100%;">
     <p class="wrapper__items-promo">Express dispatch</p>
@@ -254,10 +292,10 @@
     </li>
 
      <li class="wrapper__items">
-      <a href="1.html">
+      <a href="SS/3.html">
         <div class="wrapper__items-img" style="position: relative;
     margin-bottom: 30px;">
-      <img src="img/1.jpg" alt="Items" style="display: block;
+      <img src="img/SS/3.avif" alt="Items" style="display: block;
     width: 100%;
     height: 100%;">
     <p class="wrapper__items-promo">Express dispatch</p>
@@ -274,50 +312,10 @@
     </li>
 
      <li class="wrapper__items">
-      <a href="1.html">
+      <a href="SS/4.html">
         <div class="wrapper__items-img" style="position: relative;
     margin-bottom: 30px;">
-      <img src="img/1.jpg" alt="Items" style="display: block;
-    width: 100%;
-    height: 100%;">
-    <p class="wrapper__items-promo">Express dispatch</p>
-
-<noindex>
-  <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Ebro</h3>
-     <p class="wrapper__items-price">€350</p>
-  </div>
-  <p class="wrapper__items-desc">Bedside Table, Blue</p>
-    </noindex>
-        </div>
-      </a>
-    </li>
-
-     <li class="wrapper__items">
-      <a href="1.html">
-        <div class="wrapper__items-img" style="position: relative;
-    margin-bottom: 30px;">
-      <img src="img/1.jpg" alt="Items" style="display: block;
-    width: 100%;
-    height: 100%;">
-    <p class="wrapper__items-promo">Express dispatch</p>
-
-<noindex>
-  <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Ebro</h3>
-     <p class="wrapper__items-price">€350</p>
-  </div>
-  <p class="wrapper__items-desc">Bedside Table, Blue</p>
-    </noindex>
-        </div>
-      </a>
-    </li>
-
-     <li class="wrapper__items">
-      <a href="1.html">
-        <div class="wrapper__items-img" style="position: relative;
-    margin-bottom: 30px;">
-      <img src="img/1.jpg" alt="Items" style="display: block;
+      <img src="img/SS/4.avif" alt="Items" style="display: block;
     width: 100%;
     height: 100%;">
     <p class="wrapper__items-promo">Express dispatch</p>
