--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <h1 class="wrapper__title">Sofas</h1>
     <ul class="wrapper__list-item">
 
+
     <li class="wrapper__items">
       <a href="MS/1.html">
         <div class="wrapper__items-img" style="position: relative;
@@ -101,14 +102,15 @@
     <p class="wrapper__items-promo">Express dispatch</p>
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Ebro</h3>
-     <p class="wrapper__items-price">€350</p>
+    <h3 class="wrapper__items-title">Fernsby</h3>
+     <p class="wrapper__items-price">€4,500</p>
   </div>
-  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+  <p class="wrapper__items-desc">3 Seater Sofa, Spruce Chenille</p>
     </noindex>
         </div>
       </a>
     </li>
+
 
      <li class="wrapper__items">
       <a href="MS/2.html">
@@ -121,14 +123,15 @@
 
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Ebro</h3>
-     <p class="wrapper__items-price">€350</p>
+    <h3 class="wrapper__items-title">Jacklin</h3>
+     <p class="wrapper__items-price">€4,000</p>
   </div>
-  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+  <p class="wrapper__items-desc">3 Seater Sofa, Silver REPREVE® Recycled Polyester</p>
     </noindex>
         </div>
       </a>
     </li>
+
 
      <li class="wrapper__items">
       <a href="MS/3.html">
@@ -141,14 +144,15 @@
 
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Ebro</h3>
-     <p class="wrapper__items-price">€350</p>
+    <h3 class="wrapper__items-title">Fernsby</h3>
+     <p class="wrapper__items-price">€3,500</p>
   </div>
-  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+  <p class="wrapper__items-desc">2 Seater Sofa, Atlantic Chenille</p>
     </noindex>
         </div>
       </a>
     </li>
+
 
      <li class="wrapper__items">
       <a href="MS/4.html">
@@ -161,10 +165,10 @@
 
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Ebro</h3>
-     <p class="wrapper__items-price">€350</p>
+    <h3 class="wrapper__items-title">Livienne</h3>
+     <p class="wrapper__items-price">€3,000</p>
   </div>
-  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+  <p class="wrapper__items-desc">3 Seater Sofa, Natural Hazel Weave</p>
     </noindex>
         </div>
       </a>
@@ -182,10 +186,10 @@
 
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Ebro</h3>
-     <p class="wrapper__items-price">€350</p>
+    <h3 class="wrapper__items-title">Scott</h3>
+     <p class="wrapper__items-price">€3,000</p>
   </div>
-  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+  <p class="wrapper__items-desc">4 Seater Left Hand Facing Chaise End Corner Sofa, Concrete Cotton Velvet</p>
     </noindex>
         </div>
       </a>
@@ -202,10 +206,10 @@
 
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Ebro</h3>
-     <p class="wrapper__items-price">€350</p>
+    <h3 class="wrapper__items-title">Samona</h3>
+     <p class="wrapper__items-price">€3,750</p>
   </div>
-  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+  <p class="wrapper__items-desc">Left Hand Facing Full Corner Sofa, Stone Grey Corduroy Velvet</p>
     </noindex>
         </div>
       </a>
@@ -222,14 +226,15 @@
 
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Ebro</h3>
-     <p class="wrapper__items-price">€350</p>
+    <h3 class="wrapper__items-title">Harlow</h3>
+     <p class="wrapper__items-price">€2,350</p>
   </div>
-  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+  <p class="wrapper__items-desc">Left Hand Facing Chaise End Sofa, Saffron Recycled Velvet</p>
     </noindex>
         </div>
       </a>
     </li>
+
 
      <li class="wrapper__items">
       <a href="СS/4.html">
@@ -242,14 +247,15 @@
 
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Ebro</h3>
-     <p class="wrapper__items-price">€350</p>
+    <h3 class="wrapper__items-title">Atkinson</h3>
+     <p class="wrapper__items-price">€3,500</p>
   </div>
-  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+  <p class="wrapper__items-desc">Left Hand Facing Chaise End Sofa, Aegean Blue Textured Weave with Dark Wood Legs</p>
     </noindex>
         </div>
       </a>
     </li>
+
 
      <li class="wrapper__items">
       <a href="SS/1.html">
@@ -262,10 +268,10 @@
 
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Ebro</h3>
-     <p class="wrapper__items-price">€350</p>
+    <h3 class="wrapper__items-title">Milner</h3>
+     <p class="wrapper__items-price">€2,750</p>
   </div>
-  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+  <p class="wrapper__items-desc">Right Hand Facing Corner Storage Sofa Bed with Memory Foam Mattress, Steel Grey Velvet</p>
     </noindex>
         </div>
       </a>
@@ -282,14 +288,15 @@
 
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Ebro</h3>
-     <p class="wrapper__items-price">€350</p>
+    <h3 class="wrapper__items-title">Haru</h3>
+     <p class="wrapper__items-price">€1,000</p>
   </div>
-  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+  <p class="wrapper__items-desc">Double Sofa Bed, Large, Powder Blue Weave</p>
     </noindex>
         </div>
       </a>
     </li>
+
 
      <li class="wrapper__items">
       <a href="SS/3.html">
@@ -302,14 +309,15 @@
 
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Ebro</h3>
-     <p class="wrapper__items-price">€350</p>
+    <h3 class="wrapper__items-title">Haru</h3>
+     <p class="wrapper__items-price">€850</p>
   </div>
-  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+  <p class="wrapper__items-desc">Sofa Bed, Small, Moss Green Recycled Velvet</p>
     </noindex>
         </div>
       </a>
     </li>
+
 
      <li class="wrapper__items">
       <a href="SS/4.html">
@@ -322,10 +330,10 @@
 
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Ebro</h3>
-     <p class="wrapper__items-price">€350</p>
+    <h3 class="wrapper__items-title">Haru</h3>
+     <p class="wrapper__items-price">€650</p>
   </div>
-  <p class="wrapper__items-desc">Bedside Table, Blue</p>
+  <p class="wrapper__items-desc">Single Sofa Bed, Cygnet Grey Weave</p>
     </noindex>
         </div>
       </a>
@@ -333,7 +341,20 @@
 
     </ul>
   </div>
+  </section>
 
+  <section style="padding: 0px 120px 120px 120px;">
+    <div style="display: flex;
+    justify-content: center;
+    align-items: center;">
+      <ul style="display: flex;
+    list-style: none;
+    justify-content: center;flex-direction:inherit;">
+        <li class="mr20"><a href="ms.html"><button class="button__section">Modal Sofas</button></a></li>
+        <li class="mr20"><a href="cs.html"><button class="button__section">Corner Sofas</button></a></li>
+        <li class="mr20"><a href="ss.html"><button class="button__section">Sofa Beds</button></a></li>
+      </ul>
+    </div>
   </section>
   </main>
 </body>
