--- a/index.html
+++ b/index.html
@@ -356,6 +356,25 @@
       </ul>
     </div>
   </section>
+
+  <footer>
+    <div style="display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;max-width: 1470px;">
+    <div>
+      <ul style="display: flex;
+    justify-content: center;
+    align-items: center; font-size: 1.6rem;">
+        <li class="mr20"><a href="terms.html">Terms of Service</a></li>
+        <li class="mr20"><a href="privacy.html">Privacy Policy</a></li>
+        <li class="mr20"><a href="return.html">Return Policy</a></li>
+      </ul>
+    </div>
+    <div>
+      <a href="/"><p> ALL RIGHTS RESERVED © BETLARIE.com </p></a>
+    </div>
+  </footer>
   </main>
 </body>
 
