--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
             <div class="header__content">
     <div>
 <a href="/">
-    <h1><img src="img/logo.png" alt="HeaderLogo"></h1>
+    <h1><img 
+      class="header__logo-img"
+      src="img/logo.png" 
+      alt="HeaderLogo"></h1>
   </a>
     </div>
 
@@ -53,21 +56,16 @@
   </header>
   </nav>
 
-  <section 
-  style="background-image: url('img/hero.avif');
-  height: 80vh; width: 100%; 
-  background-repeat: no-repeat; 
- background-size: 100% 100%;
-  position: relative;">
+  <section class="hero__section">
 
     <div style="display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     flex-wrap: wrap;">
+
       <div>
- <h1 style="position:absolute;font-size: 48px!important; top: 40%; left:10%;
-    line-height: 60px;letter-spacing: normal;font-weight: 500;">FREE DELIVERY</h1>
+ <h1 class="hero__title">FREE DELIVERY</h1>
       <h2 style="left: 10%;
     position: absolute;
     top: 51%;font-size: 20px;
