--- a/index.html
+++ b/index.html
@@ -356,10 +356,7 @@
   </section>
 
   <footer>
-    <div style="display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;max-width: 1470px;">
+    <div class="footer__section">
     <div>
       <ul style="display: flex;
     justify-content: center;
