--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
     </div>
   </section>
 
-  <footer>
+  <footer style="padding: 40px;">
     <div class="footer__section">
     <div>
       <ul style="display: flex;
