--- a/ms.html
+++ b/ms.html
@@ -4,7 +4,7 @@
   lang="en">
 
 <head>
-  <title>BETLARIE.com: Sectional, Shaped, Sleeper Sofas</title>
+  <title>BETLARIE.com: Modular Sofas</title>
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -56,38 +56,17 @@
   </header>
   </nav>
 
-  <section class="hero__section">
-
-    <div style="display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    flex-wrap: wrap;">
-
-      <div>
- <h1 class="hero__title">FREE DELIVERY</h1>
-      <h2 style="left: 10%;
-    position: absolute;
-    top: 51%;font-size: 20px;
-    line-height: 30px; font-weight: 100!important;">On everything</h2>
-      <a href="#shop">
-      <button class="title__link"
-      style="left: 10%;
-    position: absolute;
-    top: 57%;">Shop now</button>
-      </div>
-      </a>
-    </div>
-  </section>
-
   <section id="shop" class="wrapper__items"
   style="    padding: 130px 0; display: block;">
   <div class="container" style="position: relative;
     margin: 0 auto;
     padding: 0 15px;
     max-width: 1470px;display: block;">
-    <h1 class="wrapper__title">Sofas</h1>
+    <noindex>
+    <h1 class="wrapper__title">Modular Sofas</h1>
+    </noindex>
     <ul class="wrapper__list-item">
+
 
 
     <li class="wrapper__items">
@@ -174,13 +153,12 @@
 
 
      <li class="wrapper__items">
-      <a href="СS/1.html">
+      <a href="MS/5.html">
         <div class="wrapper__items-img" style="position: relative;
     margin-bottom: 30px;">
-      <img src="img/CS/1.avif" alt="Items" style="display: block;
+      <img src="img/MS/5.avif" alt="Items" style="display: block;
     width: 100%;
     height: 100%;">
-    <p class="wrapper__items-promo">Express dispatch</p>
 
 <noindex>
   <div class="wrapper__flex">
@@ -193,14 +171,14 @@
       </a>
     </li>
 
+
      <li class="wrapper__items">
-      <a href="СS/2.html">
+      <a href="MS/6.html">
         <div class="wrapper__items-img" style="position: relative;
     margin-bottom: 30px;">
-      <img src="img/CS/2.avif" alt="Items" style="display: block;
+      <img src="img/MS/6.jfif" alt="Items" style="display: block;
     width: 100%;
     height: 100%;">
-    <p class="wrapper__items-promo">Express dispatch</p>
 
 <noindex>
   <div class="wrapper__flex">
@@ -213,14 +191,14 @@
       </a>
     </li>
 
+
      <li class="wrapper__items">
-      <a href="СS/3.html">
+      <a href="MS/7.html">
         <div class="wrapper__items-img" style="position: relative;
     margin-bottom: 30px;">
-      <img src="img/CS/3.avif" alt="Items" style="display: block;
+      <img src="img/MS/7.jfif" alt="Items" style="display: block;
     width: 100%;
     height: 100%;">
-    <p class="wrapper__items-promo">Express dispatch</p>
 
 <noindex>
   <div class="wrapper__flex">
@@ -235,13 +213,12 @@
 
 
      <li class="wrapper__items">
-      <a href="СS/4.html">
+      <a href="MS/8.html">
         <div class="wrapper__items-img" style="position: relative;
     margin-bottom: 30px;">
-      <img src="img/CS/4.avif" alt="Items" style="display: block;
+      <img src="img/MS/8.avif" alt="Items" style="display: block;
     width: 100%;
     height: 100%;">
-    <p class="wrapper__items-promo">Express dispatch</p>
 
 <noindex>
   <div class="wrapper__flex">
@@ -256,13 +233,12 @@
 
 
      <li class="wrapper__items">
-      <a href="SS/1.html">
+      <a href="MS/9.html">
         <div class="wrapper__items-img" style="position: relative;
     margin-bottom: 30px;">
-      <img src="img/SS/1.avif" alt="Items" style="display: block;
+      <img src="img/MS/9.avif" alt="Items" style="display: block;
     width: 100%;
     height: 100%;">
-    <p class="wrapper__items-promo">Express dispatch</p>
 
 <noindex>
   <div class="wrapper__flex">
@@ -275,14 +251,14 @@
       </a>
     </li>
 
+
      <li class="wrapper__items">
-      <a href="SS/2.html">
+      <a href="MS/10.html">
         <div class="wrapper__items-img" style="position: relative;
     margin-bottom: 30px;">
-      <img src="img/SS/2.avif" alt="Items" style="display: block;
+      <img src="img/MS/10.avif" alt="Items" style="display: block;
     width: 100%;
     height: 100%;">
-    <p class="wrapper__items-promo">Express dispatch</p>
 
 <noindex>
   <div class="wrapper__flex">
@@ -297,13 +273,12 @@
 
 
      <li class="wrapper__items">
-      <a href="SS/3.html">
+      <a href="MS/11.html">
         <div class="wrapper__items-img" style="position: relative;
     margin-bottom: 30px;">
-      <img src="img/SS/3.avif" alt="Items" style="display: block;
+      <img src="img/MS/11.avif" alt="Items" style="display: block;
     width: 100%;
     height: 100%;">
-    <p class="wrapper__items-promo">Express dispatch</p>
 
 <noindex>
   <div class="wrapper__flex">
@@ -318,14 +293,12 @@
 
 
      <li class="wrapper__items">
-      <a href="SS/4.html">
+      <a href="MS/12.html">
         <div class="wrapper__items-img" style="position: relative;
     margin-bottom: 30px;">
-      <img src="img/SS/4.avif" alt="Items" style="display: block;
+      <img src="img/MS/12.avif" alt="Items" style="display: block;
     width: 100%;
     height: 100%;">
-    <p class="wrapper__items-promo">Express dispatch</p>
-
 <noindex>
   <div class="wrapper__flex">
     <h3 class="wrapper__items-title">Haru</h3>
@@ -341,19 +314,6 @@
   </div>
   </section>
 
-  <section style="padding: 0px 120px 120px 120px;">
-    <div style="display: flex;
-    justify-content: center;
-    align-items: center;">
-      <ul style="display: flex;
-    list-style: none;
-    justify-content: center;flex-direction:inherit;">
-        <li class="mr20"><a href="ms.html"><button class="button__section">Modular Sofas</button></a></li>
-        <li class="mr20"><a href="ss.html"><button class="button__section">Sofa Beds</button></a></li>
-        <li class="mr20"><a href="cs.html"><button class="button__section">Corner Sofas</button></a></li>
-      </ul>
-    </div>
-  </section>
 
   <footer style="padding: 40px;">
     <div class="footer__section">
