--- a/ms.html
+++ b/ms.html
@@ -162,10 +162,10 @@
 
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Scott</h3>
-     <p class="wrapper__items-price">€3,000</p>
+    <h3 class="wrapper__items-title">Zita</h3>
+     <p class="wrapper__items-price">€3,750</p>
   </div>
-  <p class="wrapper__items-desc">4 Seater Left Hand Facing Chaise End Corner Sofa, Concrete Cotton Velvet</p>
+  <p class="wrapper__items-desc">Modular Chaise End Corner Sofa with 2 Side Tables, Kyoto Denim Fabric</p>
     </noindex>
         </div>
       </a>
@@ -182,10 +182,10 @@
 
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Samona</h3>
-     <p class="wrapper__items-price">€3,750</p>
+    <h3 class="wrapper__items-title">Fernsby</h3>
+     <p class="wrapper__items-price">€2,000</p>
   </div>
-  <p class="wrapper__items-desc">Left Hand Facing Full Corner Sofa, Stone Grey Corduroy Velvet</p>
+  <p class="wrapper__items-desc">Corner Modular Chair, Light Grey REPREVE® Recycled Polyester</p>
     </noindex>
         </div>
       </a>
@@ -202,10 +202,10 @@
 
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Harlow</h3>
-     <p class="wrapper__items-price">€2,350</p>
+    <h3 class="wrapper__items-title">Jacklin</h3>
+     <p class="wrapper__items-price">€1,500</p>
   </div>
-  <p class="wrapper__items-desc">Left Hand Facing Chaise End Sofa, Saffron Recycled Velvet</p>
+  <p class="wrapper__items-desc">Corner Modular Chair, Silver REPREVE® Recycled Polyester</p>
     </noindex>
         </div>
       </a>
@@ -222,10 +222,10 @@
 
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Atkinson</h3>
-     <p class="wrapper__items-price">€3,500</p>
+    <h3 class="wrapper__items-title">Laurin</h3>
+     <p class="wrapper__items-price">€1,300</p>
   </div>
-  <p class="wrapper__items-desc">Left Hand Facing Chaise End Sofa, Aegean Blue Textured Weave with Dark Wood Legs</p>
+  <p class="wrapper__items-desc">Left Hand Facing Wide Chaise End Sofa Unit, Prussian Blue Linen</p>
     </noindex>
         </div>
       </a>
@@ -242,10 +242,10 @@
 
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Milner</h3>
-     <p class="wrapper__items-price">€2,750</p>
+    <h3 class="wrapper__items-title">Laurin</h3>
+     <p class="wrapper__items-price">€1,300</p>
   </div>
-  <p class="wrapper__items-desc">Right Hand Facing Corner Storage Sofa Bed with Memory Foam Mattress, Steel Grey Velvet</p>
+  <p class="wrapper__items-desc">Right Hand Facing Wide Chaise End Sofa Unit, Frost Grey Linen</p>
     </noindex>
         </div>
       </a>
@@ -262,10 +262,10 @@
 
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Haru</h3>
-     <p class="wrapper__items-price">€1,000</p>
+    <h3 class="wrapper__items-title">Fernsby</h3>
+     <p class="wrapper__items-price">€2,200</p>
   </div>
-  <p class="wrapper__items-desc">Double Sofa Bed, Large, Powder Blue Weave</p>
+  <p class="wrapper__items-desc">Corner Modular Chair, Atlantic, Chenille</p>
     </noindex>
         </div>
       </a>
@@ -282,10 +282,10 @@
 
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Haru</h3>
-     <p class="wrapper__items-price">€850</p>
+    <h3 class="wrapper__items-title">Laurin</h3>
+     <p class="wrapper__items-price">€1,250</p>
   </div>
-  <p class="wrapper__items-desc">Sofa Bed, Small, Moss Green Recycled Velvet</p>
+  <p class="wrapper__items-desc">Right Hand Facing Sofa Unit, Prussian Blue Linen</p>
     </noindex>
         </div>
       </a>
@@ -301,10 +301,10 @@
     height: 100%;">
 <noindex>
   <div class="wrapper__flex">
-    <h3 class="wrapper__items-title">Haru</h3>
-     <p class="wrapper__items-price">€650</p>
+    <h3 class="wrapper__items-title">Jacklin</h3>
+     <p class="wrapper__items-price">€1,350</p>
   </div>
-  <p class="wrapper__items-desc">Single Sofa Bed, Cygnet Grey Weave</p>
+  <p class="wrapper__items-desc">Armless Modular Chair, Natural REPREVE® Recycled Polyester</p>
     </noindex>
         </div>
       </a>
