--- a/index.html
+++ b/index.html
@@ -358,9 +358,7 @@
   <footer style="padding: 40px;">
     <div class="footer__section">
     <div>
-      <ul style="display: flex;
-    justify-content: center;
-    align-items: center; font-size: 1.6rem;">
+      <ul class="footer__ul">
         <li class="mr20"><a href="terms.html">Terms of Service</a></li>
         <li class="mr20"><a href="privacy.html">Privacy Policy</a></li>
         <li class="mr20"><a href="return.html">Return Policy</a></li>
