--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" media="all" href="./css/main.min.css">
   <link rel="stylesheet" href="./font/stylesheet.css">
   <link rel="stylesheet" href="https://media.made.com/mws-assets/fontBase_ce5d99a44e0152b2bab0.css">
+  
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -49,7 +50,8 @@
         <li class="header__items">
           <p class="header__links">SHOP</p></li></a>
         <a href="about.html" class="header__nav"><li class="header__items">ABOUT</li></a>
-        <a href="contact.html" class="header__nav"><li class="header__items">CONTACT</li></a>
+        <a data-modal-open5
+        class="header__nav"><li class="header__items">CONTACT</li></a>
       </ul>
     </div>
     </div>
@@ -369,6 +371,60 @@
     </div>
   </footer>
   </main>
+
+  <div class="modal__backdrop5 is-hidden5" data-modal5>
+    <div class="modal5" data-form-modal5>
+
+        <button type="button" class="button__modal5" data-modal-close5> 
+            <svg class="icon__close5">
+                <use href="./img/icons.svg#icon-close"></use>
+            </svg>
+        </button>
+
+        <form autocomplete="on" 
+        class="modal__form5"
+        id="form" 
+        name="form">
+            <p class="modal__heading5">Please enter your details below</p>
+
+            <label class="modal__thumb5" for="forName">
+                <span class="modal__label">Name*</span>
+                <input class="modal__input5 _req" 
+                type="text" 
+                name="name" 
+                id="formName"> 
+
+                <svg class="icon__modal-img">
+                 <use href="./img/icons.svg#person"></use>  
+                </svg>       
+            </label>
+    
+            <label class="modal__thumb5" for="formEmail">
+                <span class="modal__label">Email*</span>
+                <input type="email" 
+                name="email" 
+                id="formEmail" 
+                class="modal__input5 _req _email">
+
+                <svg class="icon__modal-img">
+                    <use href="./img/icons.svg#icon-emailblack"></use>  
+                   </svg>      
+                </label>       
+    
+            <label class="modal__thumb5" for="formMessage">
+                <span class="modal__label">Text</span> 
+                <textarea name="message" id="formMessage" 
+                placeholder="Leave your text here" 
+                class="modal__area"></textarea>
+            </label>
+
+            <button type="submit" class="modal-button__btn">Submit</button>
+        </form>
+
+    </div>
+</div>
+
+<script src="js/main.js"></script>
 </body>
 
 
