--- a/MS/1.html
+++ b/MS/1.html
@@ -74,10 +74,13 @@ alt="ImageItem" style="width: 100%;">
     <h2 style="font-size: calc(20px + 6 * ((100vw - 320px)/ 960));
     margin-bottom: 20px;
     font-weight: 400;
-    line-height: 120%; color: #000;">Name</h2>
+    line-height: 120%; color: #000;">Fernsby</h2>
     <p style="font-size: calc(18px + 2 * ((100vw - 320px)/ 960));
     margin-bottom: 20px;
-    font-weight: 600;color: #000">Price</p>
+    font-weight: 400;color: #000">3 Seater Sofa, Spruce Chenille</p>
+    <p style="font-size: calc(18px + 2 * ((100vw - 320px)/ 960));
+    margin-bottom: 20px;
+    font-weight: 600;color: #000">€4,500</p>
 
     <form class="items__form">
     <input class="items__input" type="email" placeholder="Email">
